--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/paper"]
-	path = themes/paper
-	url = https://github.com/nanxiaobei/hugo-paper
+[submodule "themes/deepthought"]
+	path = themes/deepthought
+	url = git@github.com:RatanShreshtha/DeepThought.git
