--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
-# example netlify.toml
 [build]
-  command = "hugo"
-  functions = "netlify/functions"
-  publish = "public"
+publish = "public"
+command = "zola build"
 
 [build.environment]
-  HUGO_VERSION = "0.101.0"
+ZOLA_VERSION = "0.16.1"
