--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/deepthought"]
 	path = themes/deepthought
-	url = git@github.com:RatanShreshtha/DeepThought.git
+	url = https://github.com/RatanShreshtha/DeepThought.git
