--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ taxonomies = [
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 
-highlight_theme = "one-dark"
+highlight_theme = "monokai"
 
 external_links_target_blank = true
 
