adjust some templates, rename the posts section

--- a/config.toml
+++ b/config.toml
@@ -52,9 +52,6 @@ include_path = false
 include_content = true
 
 [extra]
-katex.enabled = true
-katex.auto_render = true
-
 chart.enabled = true
 mermaid.enabled = true
 galleria.enabled = true
@@ -62,7 +59,7 @@ galleria.enabled = true
 navbar_items = [
     { code = "en", nav_items = [
         { url = "$BASE_URL/", name = "Home" },
-        { url = "$BASE_URL/posts", name = "Posts" },
+        { url = "$BASE_URL/blog", name = "Blog" },
         { url = "$BASE_URL/docs", name = "Docs" },
         { url = "$BASE_URL/tags", name = "Tags" },
         { url = "$BASE_URL/categories", name = "Categories" },
@@ -89,3 +86,4 @@ linkedin = "arichtman"
 stackoverflow = "19531788"
 email = "hello@richtman.com.au"
 twitter = "ArielRichtman"
+medium = "arichtman"
