add mastodon properly

--- a/config.toml
+++ b/config.toml
@@ -85,4 +85,5 @@ stackoverflow = "19531788"
 email = "hello@richtman.com.au"
 twitter = "ArielRichtman"
 medium = "arichtman"
-mastodon = "@ArielRichtman@mastodon.online"
+mastodon_username = "arichtman"
+mastodon_server = "mastodon.online"
