test backwards compatibility

--- a/config.toml
+++ b/config.toml
@@ -85,5 +85,5 @@ stackoverflow = "19531788"
 email = "hello@richtman.com.au"
 twitter = "ArielRichtman"
 medium = "arichtman"
-mastodon_username = "arichtman"
+mastodon = "arichtman"
 # mastodon_server = "mastodon.online"
