try legacy + server

--- a/config.toml
+++ b/config.toml
@@ -86,4 +86,4 @@ email = "hello@richtman.com.au"
 twitter = "ArielRichtman"
 medium = "arichtman"
 mastodon = "arichtman"
-# mastodon_server = "mastodon.online"
+mastodon_server = "mastodon.online"
