--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "terminal.integrated.defaultProfile.linux": "zsh"
+  "nixEnvSelector.nixFile": "${workspaceRoot}/shell.nix",
+  "terminal.integrated.defaultProfile.linux": "nix-develop",
+  "terminal.integrated.profiles.linux": {
+    "nix-develop": {
+      "args": [
+        "develop"
+      ],
+      "path": "nix"
+    }
+  }
 }
