--- a/.github/workflows/poetry-upgrade.yml
+++ b/.github/workflows/poetry-upgrade.yml
@@ -15,3 +15,4 @@ jobs:
     - uses: Apakottur/action-poetry-package-update@v1
       with:
         base-branch: main
+        poetry-version: "1.2.2"
