--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,16 +1,26 @@
-name: Update Pre-Commit refs
+name: Pre-commit auto-update
 
 on:
-  # Allow manual triggers.
+  # every day at midnight
+  schedule:
+    - cron: "0 0 * * *"
+  # on demand  
   workflow_dispatch:
 
-  # Automatically run once a week.
-  schedule:
-  - cron: 0 7 * * MON
-
 jobs:
-  update-pre-commit:
+  auto-update:
     runs-on: ubuntu-latest
     steps:
-    - uses: browniebroke/pre-commit-autoupdate-action@v1.0.0
-
+      - uses: actions/checkout@v2
+      
+      - uses: actions/setup-python@v2
+      
+      - uses: browniebroke/pre-commit-autoupdate-action@main
+      
+      - uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: update/pre-commit-hooks
+          title: Update pre-commit hooks
+          commit-message: "chore: update pre-commit hooks"
+          body: Update versions of pre-commit hooks to latest version.
