added signal contact

--- a/config.toml
+++ b/config.toml
@@ -87,3 +87,4 @@ twitter = "ArielRichtman"
 medium = "arichtman"
 mastodon_username = "arichtman"
 mastodon_server = "mastodon.online"
+signal = "61490028679"
