--- a/config.toml
+++ b/config.toml
@@ -88,4 +88,4 @@ twitter = "ArielRichtman"
 medium = "arichtman"
 mastodon_username = "arichtman"
 mastodon_server = "mastodon.online"
-signal = "61490028679"
+#signal = "61490028679"
