--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -3,23 +3,23 @@ name: Pre-commit auto-update
 on:
   # every day at midnight
   schedule:
-    - cron: "0 0 * * *"
-  # on demand  
+  - cron: 0 0 * * *
+  # on demand
   workflow_dispatch:
 
 jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: vrslev/pre-commit-autoupdate@v1.0.0
-      - uses: peter-evans/create-pull-request@v3.11.0
-        with:
-          branch: pre-commit-autoupdate
-          title: "chore(deps): Update pre-commit hooks"
-          commit-message: "chore(deps): Update pre-commit hooks"
-          body: Update pre-commit hooks
-          labels: dependencies
-          delete-branch: True
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - uses: vrslev/pre-commit-autoupdate@v1.0.0
+    - uses: peter-evans/create-pull-request@v3.11.0
+      with:
+        branch: pre-commit-autoupdate
+        title: 'chore(deps): Update pre-commit hooks'
+        commit-message: 'chore(deps): Update pre-commit hooks'
+        body: Update pre-commit hooks
+        labels: dependencies
+        delete-branch: true
