--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,9 +7,12 @@ repos:
   hooks:
   - id: trailing-whitespace
   - id: end-of-file-fixer
+    exclude: .*drawio$
   - id: mixed-line-ending
     args: [--fix, lf]
   - id: check-yaml
+    args: [--allow-multiple-documents]
+    additional_dependencies: [ruamel.yaml]
   - id: check-toml
   - id: check-json
   - id: pretty-format-json
@@ -23,11 +26,14 @@ repos:
   - id: debug-statements
   - id: detect-private-key
   - id: forbid-new-submodules
+
 - repo: https://github.com/jackdewinter/pymarkdown
   rev: v0.9.9
   hooks:
   - id: pymarkdown
     args: [--config, .pymarkdown.json, scan]
+    additional_dependencies: [wcwidth]
+
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
   rev: v2.9.0
   hooks:
