--- a/config.toml
+++ b/config.toml
@@ -86,7 +86,7 @@ gitlab = "arichtman"
 keybase = "arichtman"
 linkedin = "arichtman"
 stackoverflow = "19531788"
-email = "hello@richtman.com.au"
+email = "hello@richtman.au"
 twitter = "ArielRichtman"
 medium = "arichtman"
 mastodon_username = "arichtman"
