removed some socials I'm not active on and gave up on nested nomicon

--- a/config.toml
+++ b/config.toml
@@ -84,11 +84,11 @@ avatar = "images/avatar.gif"
 github = "arichtman"
 gitlab = "arichtman"
 keybase = "arichtman"
-linkedin = "arichtman"
+# linkedin = "arichtman"
 stackoverflow = "19531788"
 email = "hello@richtman.au"
-twitter = "ArielRichtman"
-medium = "arichtman"
+# twitter = "ArielRichtman"
+# medium = "arichtman"
 mastodon_username = "arichtman"
 mastodon_server = "eigenmagic.net"
 #signal = "61490028679"
