--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
   rev: v0.9.15
   hooks:
   - id: pymarkdown
-    additional_dependencies: [wcwidth]
+    additional_dependencies: [wcwidth, pyyaml]
 
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
   rev: v2.11.0
