--- a/.github/workflows/auto-upgrade.yml
+++ b/.github/workflows/auto-upgrade.yml
@@ -18,10 +18,9 @@ jobs:
     - uses: DeterminateSystems/magic-nix-cache-action@main
     - name: Update stuff
       run: |
-        nix develop
         nix flake update
-        pre-commit autoupdate
-        poetry update
+        nix develop --command pre-commit autoupdate
+        nix develop --command poetry update
     - uses: peter-evans/create-pull-request@v5.0.2
       with:
         branch: auto-updates
