--- a/.github/workflows/auto-upgrade.yml
+++ b/.github/workflows/auto-upgrade.yml
@@ -29,3 +29,5 @@ jobs:
         body: Update development packages
         labels: dependencies
         delete-branch: true
+        committer: Richtman, Ariel <10679234+arichtman@users.noreply.github.com>
+        author: Richtman, Ariel <10679234+arichtman@users.noreply.github.com>
