fixed borked umami id

--- a/config.toml
+++ b/config.toml
@@ -91,4 +91,4 @@ socials = [
 
 [extra.analytics]
 service = "umami"
-id = "eb4024a-facb-4e4e-814d-2cdf131d453b"
+id = "aeb4024a-facb-4e4e-814d-2cdf131d453b"
