--- a/.github/workflows/auto-upgrade.yml
+++ b/.github/workflows/auto-upgrade.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v4.1.1
       with:
         fetch-depth: 0
+        submodules: recursive
     - uses: DeterminateSystems/nix-installer-action@main
     - uses: DeterminateSystems/magic-nix-cache-action@main
     - name: Update stuff
@@ -21,6 +22,7 @@ jobs:
         nix flake update
         nix develop --command pre-commit autoupdate
         nix develop --command poetry update
+        git submodule update --remote
     - uses: peter-evans/create-pull-request@v5.0.2
       with:
         branch: auto-updates
