--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
   - id: forbid-new-submodules
 
 - repo: https://github.com/jackdewinter/pymarkdown
-  rev: 0.9.16
+  rev: v0.9.17
   hooks:
   - id: pymarkdown
     additional_dependencies: [wcwidth, pyyaml]
@@ -36,7 +36,7 @@ repos:
   - id: pretty-format-yaml
     args: [--autofix, --indent, '2']
 - repo: https://github.com/python-jsonschema/check-jsonschema
-  rev: 0.27.3
+  rev: 0.28.0
   hooks:
   - id: check-renovate
     additional_dependencies: [json5]
