--- a/.github/workflows/auto-upgrade.yml
+++ b/.github/workflows/auto-upgrade.yml
@@ -1,9 +1,9 @@
 name: Update packages
 
 on:
-  # Automatically run once a week.
+  # Automatically run once a month.
   schedule:
-  - cron: 0 7 * * MON
+  - cron: 0 7 1 * MON
   # Allow manual triggers.
   workflow_dispatch:
 
