more csp mucking

--- a/config.toml
+++ b/config.toml
@@ -87,7 +87,9 @@ socials = [
 ]
 
 allowed_domains = [
-    { directive = "connect-src", domains = ["umami.dev"]}
+    { directive = "connect-src", domains = ["api-gateway-eu.umami.dev"]},
+    { directive = "font-src", domains = ["'self'", "data:"] },
+    { directive = "img-src", domains = ["'self'", "data:"] },
 ]
 
 [extra.analytics]
