--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "themes/tabi"]
 	path = themes/tabi
-	url = https://github.com/welpo/tabi.git
+	url = https://github.com/arichtman/tabi.git
+	branch = "umami-csp"
