more otel notes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.pymarkdown]
 # Always fails with front matter
 plugins.first-line-heading.enabled = false
+# Fails on nested headings
+plugins.no-duplicate-header.enabled = false
 plugins.line-length.line_length = 180
 plugins.line-length.code_block_line_length = 180
