--- a/config.toml
+++ b/config.toml
@@ -81,7 +81,7 @@ socials = [
     { name = "GitLab", url = "https://gitlab.com/arichtman", icon = "gitlab"},
     { name = "StackOverflow", url = "https://stackoverflow.com/users/19531788", icon = "stack-overflow"},
     { name = "StackExchange", url = "https://stackexchange.com/users/25787203", icon = "stack-exchange"},
-    { name = "KeyBase", url = "https://keybase.io/arichtman", icon = ""},
+    { name = "KeyBase", url = "https://keybase.io/arichtman", icon = "keybase"},
     # Keep a template one
     # { name = "", url = "", icon = ""},
 ]
