--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     args: [--fix, lf]
   - id: check-yaml
     args: [--allow-multiple-documents]
-    additional_dependencies: [ruamel.yaml]
+    additional_dependencies: [ruamel.yaml, ruamel_yaml]
   - id: check-toml
   - id: check-json
   - id: pretty-format-json
