reenable atom feed link

--- a/config.toml
+++ b/config.toml
@@ -59,6 +59,7 @@ include_content = true
 [extra]
 theme_switcher = true
 skin = "indigo_ingot"
+feed_icon = true
 
 remote_repository_url = "https://github.com/arichtman/www.richtman.au"
 favicon = "images/avatar.gif"
