--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "themes/tabi"]
 	path = themes/tabi
-	url = https://github.com/arichtman/tabi.git
-	ref = umami-fqdn
+	url = https://github.com/welpo/tabi.git
+	ref = main
