--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
   - id: detect-private-key
   - id: forbid-new-submodules
 
+# TODO: swap this to mado?
 - repo: https://github.com/jackdewinter/pymarkdown
   rev: v0.9.27
   hooks:
