--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v5.0.0
+  rev: v6.0.0
   hooks:
   - id: trailing-whitespace
   - id: end-of-file-fixer
@@ -24,20 +24,20 @@ repos:
   - id: detect-private-key
   - id: forbid-new-submodules
 
-# TODO: swap this to mado?
-- repo: https://github.com/jackdewinter/pymarkdown
-  rev: v0.9.27
+- repo: https://github.com/akiomik/mado
+  # TODO: pin to a version with hooks released
+  rev: main
+  # rev: v0.3.0
   hooks:
-  - id: pymarkdown
-    additional_dependencies: [wcwidth, pyyaml]
+  - id: mado
 
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-  rev: v2.14.0
+  rev: v2.15.0
   hooks:
   - id: pretty-format-yaml
     args: [--autofix, --indent, '2']
 - repo: https://github.com/python-jsonschema/check-jsonschema
-  rev: 0.31.1
+  rev: 0.36.0
   hooks:
   - id: check-renovate
     additional_dependencies: [json5]
